--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -13,7 +13,8 @@
 @ui-s-l: lightness(@ui-syntax-color);
 @ui-inv: 10%; // inverse lightness if below
 
-.ui-hue() when (@ui-s-s = 0) { @ui-hue: 220; } // Use blue hue when no saturation
+// Use mint hue when no saturation
+.ui-hue() when (@ui-s-s = 0) { @ui-hue: 90; }
 .ui-hue() when (@ui-s-s > 0) { @ui-hue: @ui-s-h; }
 .ui-hue();
 
@@ -35,17 +36,15 @@
 
 // Main colors -----------------
 @ui-fg:     hsl(@ui-hue, min(@ui-saturation, 18%), max(@ui-lightness*3, 66%) );
-@ui-bg:     hsl(@ui-hue, @ui-saturation, @ui-lightness); // normalized @syntax-background-color
-@ui-border: hsl(@ui-hue, @ui-saturation, @ui-lightness-border);
-
-
+@ui-bg:     hsl(0, 0%, 22%);  // Dark gray
+@ui-border: hsl(0, 0%, 22%);  // Dark gray
 
 
 // Custom variables
 // These variables are only used in this theme
 // ----------------------------------------------
 
-@ui-theme-name: one-dark-ui;
+@ui-theme-name: mint-dark-ui;
 
 // Text (Custom) -----------------
 @text-color-faded: fade(@text-color, 20%);
